Updated android mobile stuff, added BDD example, refactored code allowing all tests to continue to run